<resources>
    <string name="app_name">Hitradio zAPP</string>
    <string name="evaluate">Bewerten</string>
    <string name="wishSong">Song wünschen</string>
    <string name="descAlbum">Albumcover</string>
    <string name="descPlaybutton">Playbutton</string>
    <string name="playbuttoninvisible"> </string>
    <string name="login">Login</string>
    <string name="loginmod">Moderator Login</string>
    <string name="showLogin">Passwort</string>
    <string name="showUsername">Benutzername</string>
    <string name="einloggen">Einloggen</string>
    <string name="back">Zurück</string>
    <string name="ok">Absenden</string>
    <string name="unhint">Benutzername</string>
    <string name="pwhint">Passwort</string>
    <string name="playlisthint">Playlist bewerten</string>
    <string name="anchorhint">Moderator bewerten</string>
    <string name="nickhint">Nickname</string>
    <string name="information">Information Button</string>
    <string name="onestar">one star</string>
    <string name="twostars">two stars</string>
    <string name="threestars">three stars</string>
    <string name="fourstars">four stars</string>
    <string name="fivestars">five stars</string>
    <string name="wishSongdescription">Trage zur Playlist bei und \n\n wünsche dir einen Song!</string>
    <string name="wishSongHint">Wunschsong</string>
    <string name="bgdesc">background</string>
    <string name="infobox">a blue box</string>
    <string name="BuLogoutBeschreibung">Logout Button</string>
    <string name="BewertungenModeratorBeschreibung">Hier werden die Moderator-Bewertungen der Hörer angezeigt</string>
    <string name="BewertungenPlaylistBeschreibung">Hier werden die Playlist-Bewertungen der Hörer angezeigt</string>
    <string name="BewertungenModeratorUeberschrift">Moderator Bewertungen</string>
    <string name="BewertungenPlaylistUeberschrift">Playlist Bewertungen</string>
    <string name="SongWunschUeberschrift">Songwünsche</string>
    <string name="BuBewertungenAktualisieren">Einträge Aktualisieren</string>
    <string name="ivBildBeschreibung">Playlist Bild</string>
    <string name="logout">Logout</string>
    <string name="tvEintraegeAktualisieren">Bitte Aktualisieren</string>
    <string name="BuPlaylistBewertungen">Playlist Bewertungen</string>
    <string name="BuModeratorBewertungen">Moderator Bewertungen</string>
    <string name="RadioBild">Hier ist das Bild des Radio Senders zu sehen</string>
    <string name="ModeratorBegruessung">Hallo Moderator!</string>
    <string name="notification_text">Du hast eine neue Bewertung. Sieh sie dir jetzt an !</string>
    <string name="channel_name">Moderator Benachrichtigungen</string>
    <string name="Nachricht">Hallo</string>
</resources>