<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#142149"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/RadioBild"
        android:layout_width="213dp"
        android:layout_height="179dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#000000"/>

    <TextView
        android:id="@+id/tvSongWunschUeberschrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SongWunschUeberschrift"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/BewertungenÜberschrift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ScrollView
        android:id="@+id/svSongWunsch"
        android:layout_width="346dp"
        android:layout_height="267dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongWunschUeberschrift">

        <LinearLayout
            android:id="@+id/lySongWunsch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tvModeratorBewertungeUeberschrift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSongWunschUeberschrift">

            <TextView
                android:id="@+id/tvEintraegeAktualisieren"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/tvEintraegeAktualisieren"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/BewertungenAktualisieren"
                android:textStyle="italic" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buEintraegeAktualisieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#55CF99"
        android:text="@string/BuBewertungenAktualisieren"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svSongWunsch"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/buModeratorBewertungen"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="#55CF99"
        android:text="@string/BuModeratorBewertungen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buEintraegeAktualisieren"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/buPlaylistBewertungen"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="#55CF99"
        android:text="@string/BuPlaylistBewertungen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toEndOf="@+id/buModeratorBewertungen"
        app:layout_constraintTop_toBottomOf="@+id/buEintraegeAktualisieren"
        app:layout_constraintVertical_bias="0.723" />

</androidx.constraintlayout.widget.ConstraintLayout>