<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#142149"
    tools:context=".PlaylistBewertungenActivity">

    <ScrollView
        android:id="@+id/svBewertungen"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:contentDescription="@string/BewertungenPlaylistBeschreibung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408">

        <LinearLayout
            android:id="@+id/lyBewertungen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEintraegeAktualisieren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvEintraegeAktualisieren"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/BewertungenAktualisieren"
                android:textStyle="italic" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvBewertungenUeberschrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/BewertungenPlaylistUeberschrift"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/BewertungenÜberschrift"
        app:layout_constraintBottom_toTopOf="@+id/svBewertungen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Eintrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#55CF99"
        android:text="@string/BuBewertungenAktualisieren"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svBewertungen"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/tvBewertungenDurchschnitt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/BewertungenAktualisieren"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/svBewertungen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBewertungenUeberschrift" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>