<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#142149"
    tools:context=".WishSongActivity">

    <EditText
        android:id="@+id/etWishSongBox"
        android:layout_width="332dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_input2"
        android:cursorVisible="true"
        android:ellipsize="none"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/wishSongHint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:isScrollContainer="true"
        android:maxLines="10"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="@color/betweenblue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etWishSongNickname"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_input2"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/nickhint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="14"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@color/betweenblue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etWishSongBox"
        app:layout_constraintTop_toBottomOf="@+id/etWishSongBox"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/ibOkbutton"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etWishSongNickname"
        app:layout_constraintTop_toBottomOf="@+id/etWishSongBox"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/done"
        app:tint="#43FB00"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvWishSongDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/wishSongdescription"
        android:textColor="#55CF99"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/etWishSongBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibBackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="530dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        app:tint="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>