<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/viewblue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/bgdesc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blueview" />

    <Button
        android:id="@+id/buttonEvaluate"
        android:layout_width="153dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif-monospace"
        android:background="@drawable/button"
        android:text="@string/evaluate"
        android:textColor="@color/lightblue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/wishSong"
        android:layout_width="153dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif-monospace"
        android:text="@string/wishSong"
        android:textColor="@color/lightblue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toEndOf="@+id/buttonEvaluate" />

    <ImageView
        android:id="@+id/album"
        android:layout_width="234dp"
        android:layout_height="209dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/descAlbum"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/album"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/playbutton"
        android:layout_width="158dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/descPlaybutton"
        android:focusable="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/playbuttoninvisible2"
        app:layout_constraintTop_toBottomOf="@id/songOutput"
        app:srcCompat="@drawable/playbutton2" />

    <Button
        android:id="@+id/playbuttoninvisible"
        android:layout_width="158dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/playbuttoninvisible"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songOutput"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/playbuttoninvisible2"
        android:layout_width="158dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/playbuttoninvisible"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songOutput" />

    <TextView
        android:id="@+id/songOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#8CFFF5"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album" />

    <ImageView
        android:id="@+id/blueInfobox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/infobox"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blueinfobox" />

    <TextView
        android:id="@+id/infobox"
        android:layout_width="240dp"
        android:layout_height="223dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="319dp"
        app:layout_constraintBottom_toBottomOf="@+id/blueInfobox"
        app:layout_constraintEnd_toEndOf="@+id/album"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/album"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="230dp"
        android:layout_height="214dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="316dp"
        android:fontFamily="serif-monospace"
        android:textColor="@color/betweenblue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/blueInfobox"
        app:layout_constraintEnd_toEndOf="@+id/blueInfobox"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="@+id/blueInfobox"
        app:layout_constraintTop_toTopOf="@+id/blueInfobox"
        app:layout_constraintVertical_bias="0.005" />


</androidx.constraintlayout.widget.ConstraintLayout>