<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopUpLogin">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#142149"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ModeratorLogin"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:layout_marginBottom="504dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/loginmod"
        android:textColor="#78EFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/slotUsername"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="bottom|center"
        android:inputType="textPersonName"
        android:textColor="#FF081D37"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModeratorLogin"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/slotPassword"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="bottom|center"
        android:inputType="textPassword"
        android:textColor="#081D37"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slotUsername"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="445dp"
        android:background="#210041"
        android:fontFamily="sans-serif"
        android:text="@string/einloggen"
        android:textColor="#ADFFF3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/benutzername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/showUsername"
        android:textColor="#8BFFF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slotUsername" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/showLogin"
        android:textColor="#8BFFF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slotPassword" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>